Finalised mobile formatting fixes, horizontal scroll bar should be gone

--- a/styles.css
+++ b/styles.css
@@ -196,32 +196,47 @@ body {
     position: relative;
     display: block;
     width: 100%;
-    margin-left: 15px;
-    margin-right: 15px;
+    float: none;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
   } 
   
   .scrolling_content{
     position: relative;
     display: block;
     width: 100%;
-    margin-left: 15px;
-    margin-right: 15px;
     float: none;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
+ 
+
   #fixed_wrapper{
+    margin-left: 15px;
     margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     }
 
   #scrolling_wrapper{
     margin-left: 15px;
-    }
+    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    }   
 
+ .section_wrapper{
+    padding: 15px;
+    margin: 15px;
+}
   #page_header{
     display: none;
   }
-
-
 
 
   .flex{
